<resources>
    <string name="app_name">PracticalParentLavaTeam</string>

    <!-- Strings used for Button Text -->
    <string name="start_timer">Start Timer</string>
    <string name="reset">reset</string>
    <string name="cancel">Cancel</string>
    <string name="skip">skip</string>
    <string name="menu1">Child Details</string>
    <string name="menu2">Flip A Coin</string>
    <string name="menu3">Timeout Timer</string>
    <string name="menu4">Whose Turn To Do Task</string>
    <string name="menu5">Take Deep Breath</string>
    <string name="timer1">Pause</string>
    <string name="timer2">Set Custom Time</string>
    <string name="timer3">Alarm OFF</string>
    <string name="timer4">reset</string>
    <string name="history">History</string>
    <string name="flip">Flip</string>
    <string name="head">Heads</string>
    <string name="tails">Tails</string>
    <string name="deletehistory">Delete</string>
    <string name="LastTime">Last child that picked:</string>
    <string name="SelectedSide">Selected Side:</string>
    <string name="headOrtail">Heads or Tails</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_side">choose side</string>
    <string name="done">Task Completed</string>
    <string name="yes">Yes</string>
    <string name="back">back</string>
    <string name="more">for more</string>

    <!-- Strings used for TextView Text -->
    <string name="whose_history">\'s history</string>
    <string name="select_nobody">Select Nobody</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_comfirm">Are you sure you want to delete?</string>
    <string name="hint_for_name">Please Input A Name</string>
    <string name="hint_for_release">Release button and breath out.</string>
    <string name="hint_for_breath">Hold button and breath in.</string>
    <string name="configure">Select a Child to edit:</string>
    <string name="Choice">Choice:</string>
    <string name="history_starts_here">History Starts Here</string>
    <string name="who_s_turn_it_is">Whose turn it is</string>
    <string name="software">Music editing software:
        <a href="https://www.audacityteam.org/">Audacity</a></string>
    <string name="music1">music2: 远方的寂静-林海
<a href="https://y.qq.com/"> web</a></string>
    <string name="music2">music1: The Promise-Secret Garden
<a href="https://y.qq.com/"> web</a></string>
    <string name="cmpt276">Project Inspiration: CMPT 276\n Professor: Brian Fraser\n Simon Fraser University, Fall 2020.\n
        <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">CMPT276 Webpage</a></string>
    <string name="coin">Coin Image All Rights Reserved :
<a href="https://www.mint.ca/store/coins/10-oz.-pure-silver-gold-plated-coin---robert-batemans-eminto-the-light---lionem---mintage-700-2019-prod3550023">Here</a></string>
    <string name="coinsound">Coin Sound All Rights Reserved :
<a href="https://www.ear0.com/sound/show/soundid-10760">Here</a></string>
    <string name="winimage">Win Image All Rights Reserved :
<a href="https://www.stickpng.com/img/icons-logos-emojis/check-signs/green-check-in-green-circle">Here</a></string>
    <string name="loseimage">Lose Image All Rights Reserved :
<a href="https://pl.wikipedia.org/wiki/Plik:No-Symbol.svg">Here</a></string>
    <string name="alarmsound">Alarm sound All Rights Reserved :
<a href="http://soundbible.com/2197-Analog-Watch-Alarm.html">Here</a></string>
    <string name="sunimage">Sun Image All Right Reserved :
<a href="https://solarsystem.nasa.gov/system/basic_html_elements/11561_Sun.png">Here</a></string>
    <string name="circleimage">Circle Image All Right Reserved :
<a href="https://commons.wikimedia.org/wiki/File:Small-dark-green-circle.svg">Here</a></string>
    <string name="defultimage">Defult Image All Right Reserved :
<a href="https://www.dreamstime.com/default-avatar-profile-flat-icon-social-media-user-vector-portrait-unknown-human-image-default-avatar-profile-flat-icon-image184330869">Here</a></string>

    <string name="none">No Selection</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="select_a_side">Select a side</string>
    <string name="child_name_for_side">name</string>
    <string name="select_child">Selected child:</string>
    <string name="name">Name</string>
    <string name="task_name">Task Name:</string>

    <string name="ex_gurjeet">ex: Gurjeet</string>
    <string name="ex_task_name">ex: Play The Game</string>
    <string name="child_history">Button</string>
    <string name="last_picked">Last Child</string>
    <string name="edit">Edit</string>

    <string name="developed_by_team_lava">Developed by Team Lava.</string>
    <string name="yuhan_he">Yuhan He</string>
    <string name="gurjeet_singh">Gurjeet Singh</string>
    <string name="yuchun_he">Yuchun He</string>
    <string name="ahmad_as_sami">Ahmad As Sami</string>
    <string name="team_members">Team Members</string>
    <string name="ui_art_courtesy_of_gurjeet_singh">UI Art Courtesy of Gurjeet Singh.</string>
    <string name="task_name_in_change_turn">Task Name</string>
    <string name="child_name_in_change_turn">Child Name</string>
    <string name="child_name_in_list">Child Name</string>

    <string name="task_name_in_list">Task Name</string>
    <string name="item_date_in_list">Date and Time</string>
    <string name="item_name_in_list">Name</string>


    <!-- Strings used for Activity title -->
    <string name="enter_custom_minute">Please Enter Custom Minute:</string>
    <string name="do_you_want_to_delete_child">Are you sure you want to delete?</string>
    <string name="title_activity_child_details">Child Details</string>
    <string name="title_activity_select_child">Select a Child</string>
    <string name="title_activity_Flip_coin">Flip Coin</string>
    <string name="title_activity_configure_children">Configure your Children</string>
    <string name="title_activity_timeout_timer">Timeout Timer</string>
    <string name="title_activity_edit_child">Edit Child</string>
    <string name="title_select_children">Select Children</string>
    <string name="title_whose_turn">Whose Turn To Do Task</string>
    <string name="title_edit_tasks_list">Edit Tasks List</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="title_add_tasks">Add Tasks</string>
    <string name="title_change_turn">Change Turn</string>
    <string name="title_help">Help</string>
    <string name="title_choose_side">Choose Side</string>
    <string name="title_deep_breath">Deep Breath</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first_child">Select First Child</string>
    <string name="hint_for_delete_history">You Delete Flipping History!</string>
    <string name="no_child">No Child</string>
    <string name="time_up">TIME\'S UP!</string>
    <string name="hint_for_turn_off">Please Click Box To Turn Off Alarm.</string>
    <string name="select_duration">Select Duration</string>
    <string name="one_minute">Set Time: 1 Minute</string>
    <string name="two_minites">Set Time: 2 Minutes</string>
    <string name="three_minites">Set Time: 3 Minutes</string>
    <string name="five_minites">Set Time: 5 Minutes</string>
    <string name="ten_minites">Set Time: 10 Minutes</string>
    <string name="finish_set_time">Done</string>
    <string name="none_child">None</string>
    <string name="nobody">nobody</string>
    <string name="begin">Begin</string>
    <string name="out">Out</string>
    <string name="in">In</string>
    <string name="title_activity_breath_setup">BreathSetup</string>
    <string name="breath_num_hint">3</string>
    <string name="breath_setup_directions">Please Enter The Number of Breaths you would like to take</string>
    <string name="b_setup_begin">Begin</string>
    <string name="waiting_to_inhale">Waiting to Inhale</string>
    <string name="continue_breath">Continue</string>
    <string name="inhaling">Inhaling</string>
    <string name="exhaling">Exhaling</string>
    <string name="finish">Done</string>
    <string name="breaths_remaining">Let us take\t</string>
    <string name="state">Let\'s begin</string>
    <string name="_2">2</string>
    <string name="good_job">Good Job</string>
    <string-array name="breaths_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
<string-array name="minutes_array">
        <item>Set Time</item>
        <item>Set Time: 1 Minute</item>
        <item>Set Time: 2 Minutes</item>
        <item>Set Time: 3 Minutes</item>
        <item>Set Time: 5 Minutes</item>
        <item>Set Time: 10 Minutes</item>
    </string-array>
    <string-array name="timefactor">
        <item>"Time Speed"</item>
        <item>100%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>200%</item>
        <item>300%</item>
        <item>400%</item>
    </string-array>
    <string name="time1">Time@100%</string>
    <string name="time2">Time@25%</string>
    <string name="time3">Time@50%</string>
    <string name="time4">Time@75%</string>
    <string name="time5">Time@200%</string>
    <string name="time6">Time@300%</string>
    <string name="time7">Time@400%</string>
    <string name="hundred">100%</string>
    <string name="resetplease">Please Reset Timer First.</string>
    <string name="channelName">newnotif</string>
    <string name="channelDesc">newnotif</string>
    <string name="channelID">"newnotif</string>
    <string name="breath_together">\tbreath together</string>
    <string name="breath_in">Breath In</string>
    <string name="breath_out">Breath Out</string>
    <string name="notification_title">ALARM</string>
    <string name="notification_content">Time\'s Up! Touch Box To Turn Off Alarm!</string>
    <string name="stop_alarm">StopAlarm</string>
    <string name="hint_for_reset_timer">Please Reset Timer First</string>

</resources>
