<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UI.HelpActivity">

    <TextView
        android:id="@+id/yuhan"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/rounded_corners_buttons"
        android:fontFamily="@font/imprima"
        android:gravity="center"
        android:text="@string/yuhan_he"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yuchun" />

    <TextView
        android:id="@+id/dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/developed_by_team_lava"
        android:textColor="#E53935"
        android:textSize="30sp"
        android:background="#A6445871"
        android:fontFamily="@font/imprima"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gurjeet"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corners_buttons"
        android:fontFamily="@font/imprima"
        android:gravity="center"
        android:text="@string/gurjeet_singh"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toStartOf="@+id/yuchun"
        app:layout_constraintTop_toBottomOf="@+id/members" />

    <TextView
        android:id="@+id/yuchun"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/rounded_corners_buttons"
        android:fontFamily="@font/imprima"
        android:gravity="center"
        android:text="@string/yuchun_he"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/members" />

    <TextView
        android:id="@+id/sami"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corners_buttons"
        android:fontFamily="@font/imprima"
        android:gravity="center"
        android:text="@string/ahmad_as_sami"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gurjeet" />

    <TextView
        android:id="@+id/members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="29dp"
        android:background="#A6445871"
        android:fontFamily="@font/imprima"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/team_members"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gurjeet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dev" />

    <TextView
        android:id="@+id/projectid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:background="#A6445871"
        android:fontFamily="@font/imprima"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/cmpt276"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uiart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="129dp"
        android:background="#A6445871"
        android:fontFamily="@font/imprima"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ui_art_courtesy_of_gurjeet_singh"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sami" />

    <TextView
        android:id="@+id/coinimagecopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="29dp"
        android:background="#A6445871"
        android:fontFamily="@font/imprima"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/coin"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/projectid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiart" />

</androidx.constraintlayout.widget.ConstraintLayout>